src/parsers/pegjs/tex.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { Expression: peg$parseExpression },
      peg$startRuleFunction  = peg$parseExpression,

      peg$c0 = peg$otherExpectation("expression"),
      peg$c1 = peg$otherExpectation("operation or factor"),
      peg$c2 = "=",
      peg$c3 = peg$literalExpectation("=", false),
      peg$c4 = "\\",
      peg$c5 = peg$literalExpectation("\\", false),
      peg$c6 = function(head, title) { return title; },
      peg$c7 = function(head, tail) {
          return tail.reduce(function(result, element) {
            return new Node(element[1] , [result, element[3]]);
          }, head);
        },
      peg$c8 = "approx",
      peg$c9 = peg$literalExpectation("approx", false),
      peg$c10 = "leq",
      peg$c11 = peg$literalExpectation("leq", false),
      peg$c12 = "geq",
      peg$c13 = peg$literalExpectation("geq", false),
      peg$c14 = "neq",
      peg$c15 = peg$literalExpectation("neq", false),
      peg$c16 = "gg",
      peg$c17 = peg$literalExpectation("gg", false),
      peg$c18 = "ll",
      peg$c19 = peg$literalExpectation("ll", false),
      peg$c20 = "notin",
      peg$c21 = peg$literalExpectation("notin", false),
      peg$c22 = "ni",
      peg$c23 = peg$literalExpectation("ni", false),
      peg$c24 = "in",
      peg$c25 = peg$literalExpectation("in", false),
      peg$c26 = "+",
      peg$c27 = peg$literalExpectation("+", false),
      peg$c28 = "-",
      peg$c29 = peg$literalExpectation("-", false),
      peg$c30 = "*",
      peg$c31 = peg$literalExpectation("*", false),
      peg$c32 = "/",
      peg$c33 = peg$literalExpectation("/", false),
      peg$c34 = "\\cdot",
      peg$c35 = peg$literalExpectation("\\cdot", false),
      peg$c36 = function(head) { return "*"; },
      peg$c37 = function(head, tail) {
          if(options.autoMult){
            return tail.reduce(function(result, element) {
              return new Node("*" , [result, element[1]]);
            }, head);
          } else {
            throw {
              message: 'invalid syntax, hint: missing * sign',
              location: location()
            }
          }
        },
      peg$c38 = function(base, exp, fac) {
          if (exp) base = new Node('^', [base, exp]);
          if (fac) base = new Node('!', [base]);
          return base;
        },
      peg$c39 = ",",
      peg$c40 = peg$literalExpectation(",", false),
      peg$c41 = function(head, tail) {
            if (tail.length){
              return new Node(',', [head].concat(tail.map(a => a[3])));
            }
            return [head];
          },
      peg$c42 = peg$otherExpectation("functions"),
      peg$c43 = function(n) {return n;},
      peg$c44 = "operatorname",
      peg$c45 = peg$literalExpectation("operatorname", false),
      peg$c46 = "{",
      peg$c47 = peg$literalExpectation("{", false),
      peg$c48 = "}",
      peg$c49 = peg$literalExpectation("}", false),
      peg$c50 = function(n) {
            if(!options.operatorNames.includes(n))
              throw {message: "function name \"" + n + "\" is invalid!", location: location()};
            return n;
          },
      peg$c51 = function(name, exp, arg) {
          let func = new Node('function', [arg], {name, isBuiltIn:true});
          if(!exp) return func;
          else return new Node('^', [func, exp]);
        },
      peg$c52 = function(name) { if(options.functions.includes(name)) return true; },
      peg$c53 = function(name, parentheses) { return new Node('function', parentheses.args, { name }); },
      peg$c54 = "(",
      peg$c55 = peg$literalExpectation("(", false),
      peg$c56 = ")",
      peg$c57 = peg$literalExpectation(")", false),
      peg$c58 = function(s) {return s;},
      peg$c59 = "\\left(",
      peg$c60 = peg$literalExpectation("\\left(", false),
      peg$c61 = "\\right)",
      peg$c62 = peg$literalExpectation("\\right)", false),
      peg$c63 = function(args) { return new Node('()', args); },
      peg$c64 = "|",
      peg$c65 = peg$literalExpectation("|", false),
      peg$c66 = function(e) {return e;},
      peg$c67 = "\\left|",
      peg$c68 = peg$literalExpectation("\\left|", false),
      peg$c69 = "\\right|",
      peg$c70 = peg$literalExpectation("\\right|", false),
      peg$c71 = function(expr) { return new Node('||', [expr]) },
      peg$c72 = function(title, frst, scnd) { return [frst, scnd]; },
      peg$c73 = function(title, args) { return new Node("doubleblock", args, {title}); },
      peg$c74 = function(title, arg) { return new Node("singleblock", [arg], {title}); },
      peg$c75 = function(name) {
        return new Node('id', [], {name, isBuiltIn:true})
      },
      peg$c76 = peg$otherExpectation("function argument"),
      peg$c77 = peg$otherExpectation("superscript"),
      peg$c78 = "^",
      peg$c79 = peg$literalExpectation("^", false),
      peg$c80 = function(arg) {return arg;},
      peg$c81 = peg$otherExpectation("subscript"),
      peg$c82 = "_",
      peg$c83 = peg$literalExpectation("_", false),
      peg$c84 = peg$otherExpectation("digit or char"),
      peg$c85 = /^[a-z0-9]/i,
      peg$c86 = peg$classExpectation([["a", "z"], ["0", "9"]], false, true),
      peg$c87 = function() {
          let txt = text();
          if(/[a-z]/i.test(txt)){
            return new Node("id", [], { name: txt });
          } else if(/[0-9]/.test(txt)) {
            return new Node("number", [], {value:parseFloat(txt)});
          }
        },
      peg$c88 = "\\sqrt",
      peg$c89 = peg$literalExpectation("\\sqrt", false),
      peg$c90 = function(exp, arg) {
          exp = exp || new Node('number', [], {value:2});
          return new Node('function', [exp, arg], {name:'sqrt'});
        },
      peg$c91 = "\\int",
      peg$c92 = peg$literalExpectation("\\int", false),
      peg$c93 = function(from, to) {
          exp = exp || new Node('number', [], {value:2});
          return new Node('function', [exp, arg], {name:'sqrt'});
        },
      peg$c94 = peg$otherExpectation("number"),
      peg$c95 = function(sign) {
          let value = parseFloat(text().replace(/[ \t\n\r]/g, ''));
          return new Node('number', [], {value});
        },
      peg$c96 = /^[0-9]/,
      peg$c97 = peg$classExpectation([["0", "9"]], false, false),
      peg$c98 = function() {
          let value = parseFloat(text().replace(/[ \t\n\r]/g, ''));
          return new Node('number', [], {value});
        },
      peg$c99 = ".",
      peg$c100 = peg$literalExpectation(".", false),
      peg$c101 = peg$otherExpectation("name"),
      peg$c102 = function() {
          let name = text().replace(/[\s\{\}]*/g, ''); 
          return new Node('id', [], {name})
        },
      peg$c103 = function() { return options.singleCharName },
      peg$c104 = function() {
          return text().replace(/[\s\{\}]*/g, ''); 
        },
      peg$c105 = "[",
      peg$c106 = peg$literalExpectation("[", false),
      peg$c107 = "]",
      peg$c108 = peg$literalExpectation("]", false),
      peg$c109 = function(expr) { return expr; },
      peg$c110 = peg$otherExpectation("letter or digit"),
      peg$c111 = /^[a-zA-Z0-9]/,
      peg$c112 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"]], false, false),
      peg$c113 = peg$otherExpectation("letter"),
      peg$c114 = /^[a-z]/i,
      peg$c115 = peg$classExpectation([["a", "z"]], false, true),
      peg$c116 = peg$otherExpectation("newline"),
      peg$c117 = "\n",
      peg$c118 = peg$literalExpectation("\n", false),
      peg$c119 = "\r\n",
      peg$c120 = peg$literalExpectation("\r\n", false),
      peg$c121 = "\r",
      peg$c122 = peg$literalExpectation("\r", false),
      peg$c123 = "\u2028",
      peg$c124 = peg$literalExpectation("\u2028", false),
      peg$c125 = "\u2029",
      peg$c126 = peg$literalExpectation("\u2029", false),
      peg$c127 = peg$otherExpectation("space or tab"),
      peg$c128 = /^[ \t]/,
      peg$c129 = peg$classExpectation([" ", "\t"], false, false),
      peg$c130 = peg$otherExpectation("whitespace"),
      peg$c131 = "sin",
      peg$c132 = peg$literalExpectation("sin", false),
      peg$c133 = "cos",
      peg$c134 = peg$literalExpectation("cos", false),
      peg$c135 = "tan",
      peg$c136 = peg$literalExpectation("tan", false),
      peg$c137 = "sec",
      peg$c138 = peg$literalExpectation("sec", false),
      peg$c139 = "csc",
      peg$c140 = peg$literalExpectation("csc", false),
      peg$c141 = "cot",
      peg$c142 = peg$literalExpectation("cot", false),
      peg$c143 = "arcsin",
      peg$c144 = peg$literalExpectation("arcsin", false),
      peg$c145 = "arccos",
      peg$c146 = peg$literalExpectation("arccos", false),
      peg$c147 = "arctan",
      peg$c148 = peg$literalExpectation("arctan", false),
      peg$c149 = "arcsec",
      peg$c150 = peg$literalExpectation("arcsec", false),
      peg$c151 = "arccsc",
      peg$c152 = peg$literalExpectation("arccsc", false),
      peg$c153 = "arccot",
      peg$c154 = peg$literalExpectation("arccot", false),
      peg$c155 = "sinh",
      peg$c156 = peg$literalExpectation("sinh", false),
      peg$c157 = "cosh",
      peg$c158 = peg$literalExpectation("cosh", false),
      peg$c159 = "tanh",
      peg$c160 = peg$literalExpectation("tanh", false),
      peg$c161 = "ln",
      peg$c162 = peg$literalExpectation("ln", false),
      peg$c163 = "frac",
      peg$c164 = peg$literalExpectation("frac", false),
      peg$c165 = "sqrt",
      peg$c166 = peg$literalExpectation("sqrt", false),
      peg$c167 = function() {
          let name = text();
          if(options.builtInNames.includes(name)) return name;
          throw { message: 'undefined name "' + name + '"', location: location() }
        },
      peg$c168 = "!",
      peg$c169 = peg$literalExpectation("!", false),

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseExpression() {
    var s0, s1;

    peg$silentFails++;
    s0 = peg$parseOperation1();
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c0); }
    }

    return s0;
  }

  function peg$parseOperation1() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9;

    peg$silentFails++;
    s0 = peg$currPos;
    s1 = peg$parseOperation2();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$currPos;
      s4 = peg$parse_();
      if (s4 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 61) {
          s5 = peg$c2;
          peg$currPos++;
        } else {
          s5 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c3); }
        }
        if (s5 === peg$FAILED) {
          s5 = peg$currPos;
          if (input.charCodeAt(peg$currPos) === 92) {
            s6 = peg$c4;
            peg$currPos++;
          } else {
            s6 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c5); }
          }
          if (s6 !== peg$FAILED) {
            s7 = peg$parsetexOperators1();
            if (s7 !== peg$FAILED) {
              s8 = peg$currPos;
              peg$silentFails++;
              s9 = peg$parsechar();
              peg$silentFails--;
              if (s9 === peg$FAILED) {
                s8 = void 0;
              } else {
                peg$currPos = s8;
                s8 = peg$FAILED;
              }
              if (s8 !== peg$FAILED) {
                peg$savedPos = s5;
                s6 = peg$c6(s1, s7);
                s5 = s6;
              } else {
                peg$currPos = s5;
                s5 = peg$FAILED;
              }
            } else {
              peg$currPos = s5;
              s5 = peg$FAILED;
            }
          } else {
            peg$currPos = s5;
            s5 = peg$FAILED;
          }
        }
        if (s5 !== peg$FAILED) {
          s6 = peg$parse_();
          if (s6 !== peg$FAILED) {
            s7 = peg$parseOperation2();
            if (s7 !== peg$FAILED) {
              s4 = [s4, s5, s6, s7];
              s3 = s4;
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$currPos;
        s4 = peg$parse_();
        if (s4 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 61) {
            s5 = peg$c2;
            peg$currPos++;
          } else {
            s5 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c3); }
          }
          if (s5 === peg$FAILED) {
            s5 = peg$currPos;
            if (input.charCodeAt(peg$currPos) === 92) {
              s6 = peg$c4;
              peg$currPos++;
            } else {
              s6 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c5); }
            }
            if (s6 !== peg$FAILED) {
              s7 = peg$parsetexOperators1();
              if (s7 !== peg$FAILED) {
                s8 = peg$currPos;
                peg$silentFails++;
                s9 = peg$parsechar();
                peg$silentFails--;
                if (s9 === peg$FAILED) {
                  s8 = void 0;
                } else {
                  peg$currPos = s8;
                  s8 = peg$FAILED;
                }
                if (s8 !== peg$FAILED) {
                  peg$savedPos = s5;
                  s6 = peg$c6(s1, s7);
                  s5 = s6;
                } else {
                  peg$currPos = s5;
                  s5 = peg$FAILED;
                }
              } else {
                peg$currPos = s5;
                s5 = peg$FAILED;
              }
            } else {
              peg$currPos = s5;
              s5 = peg$FAILED;
            }
          }
          if (s5 !== peg$FAILED) {
            s6 = peg$parse_();
            if (s6 !== peg$FAILED) {
              s7 = peg$parseOperation2();
              if (s7 !== peg$FAILED) {
                s4 = [s4, s5, s6, s7];
                s3 = s4;
              } else {
                peg$currPos = s3;
                s3 = peg$FAILED;
              }
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parse_();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c7(s1, s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c1); }
    }

    return s0;
  }

  function peg$parsetexOperators1() {
    var s0;

    if (input.substr(peg$currPos, 6) === peg$c8) {
      s0 = peg$c8;
      peg$currPos += 6;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c9); }
    }
    if (s0 === peg$FAILED) {
      if (input.substr(peg$currPos, 3) === peg$c10) {
        s0 = peg$c10;
        peg$currPos += 3;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c11); }
      }
      if (s0 === peg$FAILED) {
        if (input.substr(peg$currPos, 3) === peg$c12) {
          s0 = peg$c12;
          peg$currPos += 3;
        } else {
          s0 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c13); }
        }
        if (s0 === peg$FAILED) {
          if (input.substr(peg$currPos, 3) === peg$c14) {
            s0 = peg$c14;
            peg$currPos += 3;
          } else {
            s0 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c15); }
          }
          if (s0 === peg$FAILED) {
            if (input.substr(peg$currPos, 2) === peg$c16) {
              s0 = peg$c16;
              peg$currPos += 2;
            } else {
              s0 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c17); }
            }
            if (s0 === peg$FAILED) {
              if (input.substr(peg$currPos, 2) === peg$c18) {
                s0 = peg$c18;
                peg$currPos += 2;
              } else {
                s0 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c19); }
              }
              if (s0 === peg$FAILED) {
                if (input.substr(peg$currPos, 5) === peg$c20) {
                  s0 = peg$c20;
                  peg$currPos += 5;
                } else {
                  s0 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$c21); }
                }
                if (s0 === peg$FAILED) {
                  if (input.substr(peg$currPos, 2) === peg$c22) {
                    s0 = peg$c22;
                    peg$currPos += 2;
                  } else {
                    s0 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$c23); }
                  }
                  if (s0 === peg$FAILED) {
                    if (input.substr(peg$currPos, 2) === peg$c24) {
                      s0 = peg$c24;
                      peg$currPos += 2;
                    } else {
                      s0 = peg$FAILED;
                      if (peg$silentFails === 0) { peg$fail(peg$c25); }
                    }
                  }
                }
              }
            }
          }
        }
      }
    }

    return s0;
  }

  function peg$parseOperation2() {
    var s0, s1, s2, s3, s4, s5, s6, s7;
